--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="jumbotron">
       <h2>Epicodus Woodfire Pizza!</h2>
-      <h4>Make your own Pie! Choose the size of pizza, and all the topping you would like on it!:</h4>
+      <h4>Make your own Pie! Choose pizza size, and all the topping you would like on your pie!:</h4>
     </div>
     <div class="row">
       <div class="col-2">
