--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         <span>Add Cheese</span>
       </div>
     </div>
+    <div class="col-6">
+      <h4>Press Submit to complete your order:</h4>
+      <div class="totalCostButton">
+        <button id="costButton" class="btn-danger">Submit</button>
+        <p>Your total cost is:</p>
+      </div>
+    </div>
+
 
 
 
