add start of UI

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
   <div class="container">
     <div class="jumbotron">
-      <h2>Epicodus Woodfire Pizza!</h2>
-      <h4>Make your own Pie! Choose pizza size, and all the topping you would like on your pie!:</h4>
+      <h1>PDX Pizza Palace!</h1>
+      <h3>Make your own Pie!</h3>
+      <h6>Choose your pizza size, and toppings:</h6>
     </div>
     <div class="row">
       <div class="col-2">
@@ -24,11 +25,12 @@
         <span>Add Cheese</span>
       </div>
     </div>
+
     <div class="col-6">
       <h4>Press Submit to complete your order:</h4>
       <div class="totalCostButton">
         <button id="costButton" class="btn-danger">Submit</button>
-        <p>Your total cost is:</p>
+        <p>Your total cost is: <span id="cost"></span></p>
       </div>
     </div>
 
