add new thought to UI

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h4>Press Submit to complete your order:</h4>
       <div class="totalCostButton">
         <button id="costButton" class="btn-danger">Submit</button>
-        <p>Your total cost is: <span id="cost"></span></p>
+        <p>Your total cost is: <span id="totalCost"></span></p>
       </div>
     </div>
 
