Trial and error

--- a/index.html
+++ b/index.html
@@ -17,6 +17,30 @@
       <h6>Choose your pizza size, and toppings:</h6>
     </div>
     <div class="row">
+      <div class="col-4">
+        <div class="sizeButtons">
+          <button id="smallButton" class="btn-info">Add</button>
+        </div>
+        <span>Small Pizza</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4">
+        <div class="sizeButtons">
+          <button id="mediumButton" class="btn-info">Add</button>
+        </div>
+        <span>Medium Pizza</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4">
+        <div class="sizeButtons">
+          <button id="largeButton" class="btn-info">Add</button>
+        </div>
+        <span>Large Pizza</span>
+      </div>
+    </div>
+    <div class="row">
       <div class="col-2">
         <h2>Toppings</h2>
         <div class="topButtons">
@@ -25,7 +49,46 @@
         <span>Add Cheese</span>
       </div>
     </div>
-
+    <div class="row">
+      <div class="col-2">
+        <div class="topButtons">
+          <button id="foodButton" class="btn btn-warning">Add</button>
+        </div>
+        <span>Add Pepperoni</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-2">
+        <div class="topButtons">
+          <button id="foodButton" class="btn btn-warning">Add</button>
+        </div>
+        <span>Add Salami</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-2">
+        <div class="topButtons">
+          <button id="foodButton" class="btn btn-warning">Add</button>
+        </div>
+        <span>Add Pineapple</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-2">
+        <div class="topButtons">
+          <button id="foodButton" class="btn btn-warning">Add</button>
+        </div>
+        <span>Add Ham</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-2">
+        <div class="topButtons">
+          <button id="foodButton" class="btn btn-warning">Add</button>
+        </div>
+        <span>Add Peppers</span>
+      </div>
+    </div>
     <div class="col-6">
       <h4>Press Submit to complete your order:</h4>
       <div class="totalCostButton">
